JavaScriptCore:

Reviewed by Darin.

        - Fix for http://bugs.webkit.org/show_bug.cgi?id=13456
        REGRESSION: setTimeout "arguments" object gets shadowed by a local variable

        - Add a explicit check for arguments. Previously check was done with getDirect,
        but since the arguments is created on-demand in ActivationImp, it doesn't
        show up in the test. 'arguments' should always be in the VarDeclNode's
        evaluation scope.

        * kjs/nodes.cpp:
        (VarDeclNode::evaluate): Additional check if the var decl identifier is 'arguments'

LayoutTests:

        Reviewed by Darin.

        - Test cases for http://bugs.webkit.org/show_bug.cgi?id=13456
          REGRESSION: setTimeout"arguments" object gets shadowed by a local variable

        * fast/js/resources/vardecl-preserve-arguments.js: Added.
        * fast/js/vardecl-preserve-arguments-expected.txt: Added.
        * fast/js/vardecl-preserve-arguments.html: Added.



Canonical link: https://commits.webkit.org/18193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21790 268f45cc-cd09-0410-ab3c-d52691b4dbfc